--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.7.7",
+    "currency-list": "^1.0.8",
     "date-fns": "^4.1.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
