--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
