--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "supabase": "^2.22.6",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
